<resources>
    <string name="app_name">Cadastro</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_hint">Nome</string>
    <string name="password_hint">Senha</string>
    <string name="surname_hint">Sobrenome</string>
    <string name="continue_button">continue</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="finish">Finalizar</string>
    <string name="description_hint">Descrição</string>
</resources>
